--- a/index.html
+++ b/index.html
@@ -18,21 +18,30 @@
 </head>
 
 <body>
-    <header> 
+    <header>
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
         <nav>
-            <ul>
-    <li><a href="">Home</a></li>
-    <li><a href="">Gallery</a></li>
-    <li><a href="">Sign Up</a></li>
-    </ul>
+            <ul link="menu">
+                <li><a href="" class="active">Home</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Sign Up</a></li>
+            </ul>
         </nav>
     </header>
     <main>Main Content</main>
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+    </footer>
 
+    <!--Font awesome kit-->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
