--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <i class="fa-solid fa-bars"></i>
         <nav>
             <ul link="menu">
                 <li><a href="" class="active">Home</a></li>
@@ -36,7 +37,26 @@
     <footer>
         <ul>
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+                    aria-label="Visit our facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in new tab)">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in new tab)">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube channel (opens in new tab)">
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
+            </li>
         </ul>
     </footer>
 
