--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
-        <i class="fa-solid fa-bars"></i>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul link="menu">
                 <li><a href="" class="active">Home</a></li>
