--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul link="menu">
-                <li><a href="" class="active">Home</a></li>
-                <li><a href="">Gallery</a></li>
-                <li><a href="">Sign Up</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
     </header>
     <main>Main Content</main>
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Visit our facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
